Fixed CSS general layout issues with list and portal list

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -714,7 +714,7 @@
 
 				// former li
 				>.content_value {
-					height: inherit;
+					height: auto;
 					position: relative;
 					width: 100%;
 				}
@@ -775,7 +775,7 @@
 		}//end &.list
 
 		&.edit_in_list {
-			box-shadow: none !important;
+			// box-shadow: none !important;
 
 			>.content_data  {
 				padding: 0 !important;
@@ -1025,8 +1025,8 @@
 
 				>.close {
 					position: absolute;
-					top: -0.1em;
-					right: -0.4em;
+					top: -1px;
+					right: -3px;
 					z-index: 3;
 				}
 
