--- a/core/page/css/layout/list.less
+++ b/core/page/css/layout/list.less
@@ -505,6 +505,7 @@
 			display: block; // ?????
 			padding: 0px;
 			margin: 0px;
+			height: 100%;
 
 			// >* {
 				// padding: 0.25rem;
